# llvm

bindings/go/llvm/: transforms_hc.go
bindings/ocaml/transforms/: CMakeLists.txt
bindings/ocaml/transforms/hc/: CMakeLists.txt  hc_ocaml.c  llvm_hc.ml  llvm_hc.mli
bindings/python/llvm/: core.py
include/llvm/: InitializePasses.h  LinkAllPasses.h
include/llvm-c/: Initialization.h
include/llvm-c/Transforms/: HC.h
include/llvm/LTO/legacy/: ThinLTOCodeGenerator.h
include/llvm/Transforms/: HC.h
include/llvm/Transforms/HC/: HC.h
lib/LTO/: LLVMBuild.txt  ThinLTOCodeGenerator.cpp
lib/Transforms/HC/: CMakeLists.txt  HC.cpp  LLVMBuild.txt  SelectAcceleratorCode.cpp
lib/Transforms/HC/SelectAcceleratorCode/: CMakeLists.txt  SelectAcceleratorCode.cpp
lib/Transforms/IPO/: FunctionImport.cpp
lib/Transforms/Utils/: SplitModule.cpp
tools/llvm-lto/: CMakeLists.txt  LLVMBuild.txt  llvm-lto.cpp
tools/lto/: CMakeLists.txt
tools/optllc/: CMakeLists.txt  LLVMBuild.txt  optllc.cpp
utils/: GenLibDeps.pl
